--- a/.github/workflows/streamlink.yml
+++ b/.github/workflows/streamlink.yml
@@ -6,9 +6,9 @@ name: Build and Push Docker Image
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ gha-init ]
+    branches: [ main ]
   pull_request:
-    branches: [ gha-init ]
+    branches: [ main ]
   schedule:
     # Triggers the workflow monthly to keep image fresh with upstream base images
     - cron: '0 12 1 * *'
@@ -30,11 +30,6 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
       -
-        # Set up QEMU and Buildx so we can build multiple platforms later
-        name: Set up QEMU
-        id: qemu
-        uses: docker/setup-qemu-action@v1.2.0
-      -
         # BuildKit (used with `docker buildx`) is the best way to build images
         name: Set up Docker Buildx
         id: buildx
@@ -46,14 +41,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        # Login to GitHub Core Registry
-        name: Login to GHCR
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
       -
         # List of Docker Images to use as Basename for Tags
         name: Docker Meta
